090518 cs  xtt       More flexible layout of operator buttons. NoFastAvail not used any more.
090518 cs  xtt       Bugfix in xtt termination. Free in wrong order could cause segfault.
090518 cs  xtt       Advanced user set as default, not set with option -d.
090519 cs  ge        Bugfix in fonts for language se_sv.
090601 cs  ge        New action: SetValue to set a specified value into an attribute.
090625 cs  xtt       Bugfix in eventlist, adding event in a full list could cause segfault.
090625 cs  xtt       Blocklist window title was wrong.
090810 cs  xtt       Blockwindow: checkbuttons changed to radiobuttons.
090811 cs  xtt       Command 'create item' with null destination creaets item on toplevel.
090828 cs  xtt       Help menu links updated to new Operator's Guide.
090902 cs  ge        Dynamic Invisible works for Int64 and UInt64.
090902 cs  flow      Bugfix in flow, if two objects overlapped, both were moved by the move event.
090916 cs  xtt       New operator window layout with menu and status bar.
090916 cs  xtt       Alarm time viewed in operator window.
090916 cs  xtt       New xtt command 'show objectlist /class='.
090916 cs  xtt       New xtt commands 'create opmenuitem' and 'delete opmenuitem' to modify operator window menu..
090930 cs  ge        Java compile problems for subgraphs with multiple annotations fixed.
091020 cs  xtt       Bugfix in System Messages, zip-files >= version 10 was not opened in the correct order in next/prev file.
091029 cs  xtt       Bugfix in xtt logging, restore on attributes of attributeobject didn't work.
091029 cs  xtt       Bugfix in xtt logging, if showfile was activate before logging was terminated, xtt could segfault.
091102 cs  ge        Menu entry to create subgraphs added.
091102 cs  ge        Menu items for connections changed to radio items.
091103 cs  xtt       Translation and utf8 conversion of search condition in EventLog window fixed.