@@ -152,3 +152,4 @@
 091102 cs  ge        Menu entry to create subgraphs added.
 091102 cs  ge        Menu items for connections changed to radio items.
 091103 cs  xtt       Translation and utf8 conversion of search condition in EventLog window fixed.
+091104 cs  glow      Fixcolor added to arc properties.
